--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bakinzone-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "netlify/functions/api.js",
   "repository": "https://github.com/romabulani/bakinzone-backend.git",
   "author": "Roma Bulani <42478246+romabulani@users.noreply.github.com>",
   "license": "MIT",
@@ -13,9 +13,13 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "netlify-cli": "^17.29.0",
+    "netlify-lambda": "^2.0.15",
+    "serverless-http": "^3.2.0"
   },
   "scripts": {
-    "serve": "nodemon server.js"
+    "serve": "nodemon server.js",
+    "build": "netlify deploy --prod"
   }
 }
